--- a/stock_card_trisakti/static/description/index.html
+++ b/stock_card_trisakti/static/description/index.html
@@ -1,18 +1,18 @@
-<div style="background-color: #714B67; height: 810px; width: 100%; padding: 15px; position: relative;">
+<!-- <div style="background-color: #714B67; height: 810px; width: 100%; padding: 15px; position: relative;">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-12">
+      <div class="col-sm-12 col-md-12 col-lg-12"> -->
         <!-- APP HERO -->
-        <h1 style="color: #FFFFFF; font-weight: bolder; font-size: 50px; text-align: center; margin-top: 50px;"> Stock Card
+<!--         <h1 style="color: #FFFFFF; font-weight: bolder; font-size: 50px; text-align: center; margin-top: 50px;"> Stock Card
           </h1>
         <p style="color:#FFFFFF; padding: 8px 15px; text-align: center; font-size: 24px;">PDF and Excel Report of the Stock Move,Product,Transfer and Stock Valuation</p>
-        <!-- END OF APP HERO -->
-        <img src="assets/screenshots/hero.gif" class="img-responsive"
+        <!-- END OF APP HERO --> -->
+<!--         <img src="assets/screenshots/hero.gif" class="img-responsive"
           style="width: 100%; margin-left: auto; margin-right: auto;" />
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- NAVIGATION SECTION -->
 <!-- <div class="d-flex align-items-center" style="border-bottom: 2px solid #714B67; padding: 15px 0px; margin-top: 300px;">
   <div class="d-flex justify-content-center align-items-center mr-2"
