--- a/stock_card_trisakti/static/description/index.html
+++ b/stock_card_trisakti/static/description/index.html
@@ -5,8 +5,8 @@
         <!-- APP HERO -->
 <!--         <h1 style="color: #FFFFFF; font-weight: bolder; font-size: 50px; text-align: center; margin-top: 50px;"> Stock Card
           </h1>
-        <p style="color:#FFFFFF; padding: 8px 15px; text-align: center; font-size: 24px;">PDF and Excel Report of the Stock Move,Product,Transfer and Stock Valuation</p>
-        <!-- END OF APP HERO --> -->
+        <p style="color:#FFFFFF; padding: 8px 15px; text-align: center; font-size: 24px;">PDF and Excel Report of the Stock Move,Product,Transfer and Stock Valuation</p> -->
+        <!-- END OF APP HERO -->
 <!--         <img src="assets/screenshots/hero.gif" class="img-responsive"
           style="width: 100%; margin-left: auto; margin-right: auto;" />
       </div>
