--- a/stock_card_trisakti/static/description/index.html
+++ b/stock_card_trisakti/static/description/index.html
@@ -24,6 +24,7 @@
         <h1 style="color: #FFFFFF; font-weight: bolder; font-size: 50px; text-align: center; margin-top: 50px;"> Stock Card Trisakti
           </h1>
         <p style="color:#FFFFFF; padding: 8px 15px; text-align: center; font-size: 24px;">PDF and Excel Report of the Stock Move,Product,Transfer and Stock Valuation</p>
+        <p style="color:#FFFFFF; padding: 8px 15px; text-align: center; font-size: 24px;">please provide feedback and suggestions for the stock card trisakti add-on at the following link https://forms.gle/Pp6kn9V9CF7iKyuU9 </p>
         <!-- END OF APP HERO -->
       </div>
     </div>
