--- a/stock_card_trisakti/static/description/index.html
+++ b/stock_card_trisakti/static/description/index.html
@@ -24,7 +24,6 @@
         <h1 style="color: #FFFFFF; font-weight: bolder; font-size: 50px; text-align: center; margin-top: 50px;"> Stock Card Trisakti
           </h1>
         <p style="color:#FFFFFF; padding: 8px 15px; text-align: center; font-size: 24px;">PDF and Excel Report of the Stock Move,Product,Transfer and Stock Valuation</p>
-        <p style="color:#FFFFFF; padding: 8px 15px; text-align: center; font-size: 24px;">please provide feedback and suggestions for the stock card trisakti add-on at the following link https://forms.gle/Pp6kn9V9CF7iKyuU9 </p>
         <!-- END OF APP HERO -->
       </div>
     </div>
@@ -42,8 +41,10 @@
 </div>
 <div class="row" style="font-family: 'Montserrat', sans-serif; font-weight: 400; font-size: 14px; line-height: 200%;">
   <div class="col-sm-12 py-4">
-    This module is helps you to excel and pdf report for stock move,product,
-    transfer and stock valuation.
+    This module is helps you to excel and pdf report for stock move, product, transfer and stock valuation.
+  </div>
+  <div class="col-sm-12 py-4">
+    This module is helps you to excel and pdf report for stock move, product, transfer and stock valuation.
   </div>
 </div>
 <!-- END OF OVERVIEW SECTION -->
