--- a/stock_card_trisakti/static/description/index.html
+++ b/stock_card_trisakti/static/description/index.html
@@ -41,8 +41,8 @@
 </div>
 <div class="row" style="font-family: 'Montserrat', sans-serif; font-weight: 400; font-size: 14px; line-height: 200%;">
   <div class="col-sm-12 py-4">
-    This module is helps you to excel and pdf report for stock move, product, transfer and stock valuation.\n
-    please provide feedback and suggestions for the stock card trisakti add-on at the following link https://forms.gle/Pp6kn9V9CF7iKyuU9
+    This module is helps you to excel and pdf report for stock move, product, transfer and stock valuation.
+    <p>Please provide feedback and suggestions for the stock card trisakti add-on at the following link https://forms.gle/Pp6kn9V9CF7iKyuU9</p>
   </div>
 </div>
 <!-- END OF OVERVIEW SECTION -->
